# maxbit_task_tracker_bot

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 9068950e7afa_initial_revision.py  e00aaf19a92b_initial_revision.py
tasks/: models.py  repo.py  schema.py  service.py
tg_task_tracker/: client.py  config.py  database.py  logger.py
tracker/: client.py  handlers.py  states.py
users/: models.py  repo.py  schema.py  service.py
